  (SeungCheol Jung, review by Nicolás Ojeda Bär)

- #12260: Fix invalid_argument on some external or module aliases in ocamlnat
  (Fabian Hemmer, review by Vincent Laviron)

- #12185: New script language for ocamltest.
  (Damien Doligez with Florian Angeletti, Sébastien Hinderer, Gabriel Scherer,
   review by Sébastien Hinderer and Gabriel Scherer)

### Manual and documentation:

- #12338: clarification of the documentation of process related function in
  the unix module regarding the first element of args and shell's pid.
  (Christophe Raffalli, review by Florian Angeletti)

- #12352: Fix a typo in the documentation of Arg.write_arg
  (Christophe Raffalli, review by Florian Angeletti)

### Compiler user-interface and warnings:

- #12247: configure: --disable-ocamldebug can now be used instead
  of --disable-debugger (which remains available for compatibility)
  (Gabriel Scherer, review by Damien Doligez and Sébastien Hinderer)

- #12210: uniform style for inline code in compiler messages
  (Florian Angeletti, review by Gabriel Scherer)

* #12278, #:12325: Remove the OCAML_FLEXLINK environment variable from the
  compiler drivers. This environment variable was previously used as part of the
  FlexDLL bootstrap procedure and existed solely for that purpose. Its removal
  greatly simplifies both the build system and testsuite machinery.
  (David Allsopp, review by Sébastien Hinderer)

- #12347: error messages: always report missing polyvariant tags
  (Florian Angeletti, report by Tianbo Hao, review by Gabriel Scherer)

- #12224, specialized error message when trying to apply non-functor
  module (e.g `module M = Int(Int)`)
  (Florian Angeletti, review by Gabriel Scherer)

### Internal/compiler-libs changes:

- #12216, #12248: Prevent reordering of atomic loads during instruction
  scheduling.  This is for reference, as instruction scheduling is currently
  unused in OCaml 5.
  (Xavier Leroy, report by Luc Maranget and KC Sivaramakrishnan,