@@ -275,6 +275,12 @@ let run_script log env =
           Printf.sprintf "error in script response: unknown variable %s" name
         in
         (Result.fail_with_reason reason, newenv)
+      | exception Variables.Recursive_variable_definition name ->
+        let reason =
+          Printf.sprintf "error in script response: \
+            recursive variable definition %s" name
+        in
+        (Result.fail_with_reason reason, newenv)
     end else begin
       let reason = String.trim (Sys.string_of_file response_file) in
       let newresult = { result with Result.reason = Some reason } in
@@ -319,6 +325,12 @@ let run_hook hook_name log input_env =
       | exception Variables.No_such_variable name ->
         let reason =
           Printf.sprintf "error in script response: unknown variable %s" name
+        in
+        (Result.fail_with_reason reason, hookenv)
+      | exception Variables.Recursive_variable_definition name ->
+        let reason =
+          Printf.sprintf "error in script response: \
+            recursive variable definition %s" name
         in
         (Result.fail_with_reason reason, hookenv)
       end
