@@ -29,21 +29,22 @@ let to_bindings env =
   in
   VariableMap.fold f env []
 
-let expand_aux env value =
-  let bindings = to_bindings env in
-  let f (variable, value) = ((Variables.name_of_variable variable), value) in
-  let simple_bindings = List.map f bindings in
-  let subst s = try (List.assoc s simple_bindings) with Not_found -> "" in
-  let b = Buffer.create 100 in
-  try Buffer.add_substitute b subst value; Buffer.contents b with _ -> value
+let rec expand vars simple_bindings value =
+  let b = Buffer.create (String.length value) in
+  Buffer.add_substitute b (subst vars simple_bindings) value; Buffer.contents b
 
-let rec expand env value =
-  let expanded = expand_aux env value in
-  if expanded=value then value else expand env expanded
+and subst vars simple_bindings s =
+  if List.mem s vars then raise (Variables.Recursive_variable_definition s);
+  try expand (s :: vars) simple_bindings (List.assoc s simple_bindings)
+  with Not_found -> ""
 
 let expand env = function
   | None -> raise Not_found
-  | Some value -> expand env value
+  | Some value ->
+     let bindings = to_bindings env in
+     let f (variable, value) = ((Variables.name_of_variable variable), value) in
+     let simple_bindings = List.map f bindings in
+     expand [] simple_bindings value
 
 let append_to_system_env environment env =
   (* Augment env with any bindings which are only in environment. This must be
