@@ -1,0 +1,4 @@
+str
+$notvar
+$foo
+bar
